tests/NormalTests/paczka1/fuzzy1/58431005.err
Error in line 8: vG0UXDzfO8P A785 82,7
Error in line 9: vG0UXDzfO8P S945 17,8
Error in line 12: nLsa0yBFc S945 71,9
Error in line 17: IEa A310 29,1
Error in line 23: A785 S945 -1,8
Error in line 18: IEa S945 97,3
Error in line 25: IEa A310 21,9
Error in line 28: dyId S945 15,5
Error in line 32: dyId A310 456,80
